--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <td>Planner Buyer at <strong>Emerson Commercial & Residential Solutions</strong></td>
             </tr>
             <tr>
-                <td>2023-2023</td>
+                <td>2023-Present</td>
                 <td>Customer Service Analyst at <strong>Wolters Kluwer</strong></td>          
         </tbody>
         <tfoot>
